<resources>
    <string name="app_name">CS4520_InClassAssignments</string>
    <!-- In-Class 01 string values -->
    <string name="ic01_calculate_bmi">Calculate BMI</string>
    <string name="ic01_body_mass_index_bmi">Body Mass Index (BMI)</string>
    <string name="ic01_click_on_calculate_bmi_to_find_your_bmi">Click on Calculate BMI to find your BMI</string>
    <string name="ic01_your_weight_in_pounds">Your Weight (in pounds)</string>
    <string name="ic01_feet">feet</string>
    <string name="ic01_inches">inches</string>
    <string name="ic01_weight">Weight</string>
    <string name="ic01_height">Height</string>
    <string name="ic01_lbs">lbs</string>
    <!-- These are the main string values -->
    <string name="main_practice">Practice</string>
    <string name="main_in_class_param">In Class %1$s</string>
    <!-- From ic2 but could be considered general use -->
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="android">Android</string>
    <string name="ios">IOS</string>
    <string name="name">Name</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generate_number">Generate Number</string>
    <string name="go">GO</string>
    <string name="loading">Loading...</string>
    <!-- IN CLASS 04 -->
    <string name="minimum">Minimum: %1$f</string>
    <string name="maximum">Maximum: %f</string>
    <string name="avg">Average: %f</string>
    <!-- IN CLASS 06 -->
    <string name="ic06_findnews">Find News</string>
    <string name="prompt_email">Email:</string>
    <string name="prompt_password">Password:</string>
    <string name="action_sign_in">Sign In or Register</string>
    <string name="delete">- Delete</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="register_now">Register Now</string>
    <string name="back_to_login">Back to Login</string>
    <string name="saved_session_key">MAD_NU_winn07_session</string>
    <string name="ic07_preferences_file">NUMAD_NU_winn07_IC07_sessions</string>
    <!-- IN CLASS 07 -->

    <!-- IN CLASS 08 -->

    <string name="ic8_username">Username</string>
    <string name="ic8_messages_title">All Messages</string>
    <string name="ic8_edit_profile_title">Profile</string>
    <string name="ic8_new_chat_title">New Chat</string>
    <string name="ic8_return_to_messages">Back</string>
    <string name="ic8_send_message">Send</string>
    <string name="ic8_confirm_password">Confirm Password</string>
    <string name="ic8_first_name">First Name</string>
    <string name="ic8_last_name">Last Name</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_message">MessageActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ic08_preferences_file">NUMAD_06_ic08_file</string>


</resources>