<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ic03_baseContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InClass03">


    <EditText
        android:id="@+id/ic03_NameEdit"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic03_AvatarImageV"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic03_emailEditText"
        tools:src="@drawable/select_avatar" />

    <TextView
        android:id="@+id/ic03_IUseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:text="I use:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic03_AvatarImageV" />

    <RadioGroup
        android:id="@+id/ic03_andorios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic03_IUseText">

        <RadioButton
            android:id="@+id/ic03_radioAndroid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android"
            tools:layout_editor_absoluteX="49dp"
            tools:layout_editor_absoluteY="448dp" />

        <RadioButton
            android:id="@+id/ic03_radioIOS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ios"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="448dp" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/ic03_MoodSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:max="3"
        android:progress="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic03_moodIndicTextView" />

    <LinearLayout
        android:id="@+id/ic03_submitTimeoutLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic03_moodImageView">

        <Button
            android:id="@+id/ic03_submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/submit" />
    </LinearLayout>

    <EditText
        android:id="@+id/ic03_emailEditText"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic03_NameEdit" />

    <TextView
        android:id="@+id/ic03_moodIndicTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="Your current mood: Happy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic03_andorios" />

    <ImageView
        android:id="@+id/ic03_moodImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ic03_MoodSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/ic03_moodIndicTextView"
        app:srcCompat="@drawable/happy" />
</androidx.constraintlayout.widget.ConstraintLayout>