<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InClass08Activity">

    <TextView
        android:id="@+id/ic8_home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/ic8_messages_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ic8_home_recyc_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_items" />

    <Button
        android:id="@+id/ic8_home_to_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/ic8_edit_profile_title"
        app:layout_constraintBottom_toBottomOf="@+id/ic8_home_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ic8_home_title" />

    <com.example.cs4520_inclassassignments.MultiSelectionSpinner
        android:id="@+id/spn_items"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="213dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="28dp"
        android:layout_weight="2"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/ic8_home_recyc_view"
        app:layout_constraintEnd_toStartOf="@+id/ic8_home_new_chat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ic8_home_new_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="23dp"
        android:text="@string/ic8_new_chat_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spn_items"
        app:layout_constraintTop_toBottomOf="@+id/ic8_home_to_profile" />
</androidx.constraintlayout.widget.ConstraintLayout>